[gd_scene load_steps=19 format=4 uid="uid://cq2bogrtha2ng"]

[ext_resource type="Texture2D" uid="uid://c7jcrpe8n6228" path="res://options.png" id="1"]
[ext_resource type="Script" uid="uid://cjckgwbjhqmnb" path="res://options.gd" id="2"]
[ext_resource type="FontFile" uid="uid://cvvi6o8v4r7dh" path="res://ariblk.ttf" id="3"]
[ext_resource type="Texture2D" uid="uid://clg4mk0gj15wb" path="res://handle.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ciby07ecbmnm2" path="res://yes.png" id="5"]
[ext_resource type="Texture2D" uid="uid://2h42e4tljyiq" path="res://no.png" id="6"]
[ext_resource type="AudioStream" uid="uid://b54qsdxvp8v5p" path="res://options_volumetest.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://dvtte0lvio6u0" path="res://baa.wav" id="8"]
[ext_resource type="AudioStream" uid="uid://daax0sm4wiefg" path="res://uihover.wav" id="9"]
[ext_resource type="AudioStream" uid="uid://dh6pm2jo1420s" path="res://uipress.wav" id="10"]
[ext_resource type="AudioStream" uid="uid://chbwgwjhw1tmf" path="res://uirelease.wav" id="11"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmi34"]
bg_color = Color(0.890196, 0.890196, 0.890196, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p8250"]
content_margin_left = 5.0
bg_color = Color(0.892034, 0.892034, 0.892034, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_0kfld"]
color = Color(0.29219, 0.29219, 0.29219, 1)
grow_end = 0.0
thickness = 3

[sub_resource type="Theme" id="Theme_w5qgn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kls10"]

[sub_resource type="Theme" id="Theme_51314"]
default_font = ExtResource("3")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0.545924, 0.934453, 1)
Button/colors/font_hover_pressed_color = Color(0.0536234, 0, 0.872918, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.160392, 0.185003, 1, 1)
Button/font_sizes/font_size = 12
Button/fonts/font = ExtResource("3")
Panel/styles/panel = SubResource("StyleBoxEmpty_kls10")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wq7h2"]

[node name="Options" type="Sprite2D"]
position = Vector2(320, 240)
texture = ExtResource("1")

[node name="Node" type="Node" parent="."]
script = ExtResource("2")

[node name="Name" type="LineEdit" parent="Node"]
offset_left = 80.0
offset_top = 192.0
offset_right = 240.0
offset_bottom = 218.0
scale = Vector2(1.32, 1.32)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.253238, 0.253238, 0.253238, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxFlat_vmi34")
theme_override_styles/normal = SubResource("StyleBoxFlat_p8250")
text = "u"
placeholder_text = "Name"
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="Master" type="HSlider" parent="Node"]
offset_left = 80.0
offset_top = 288.0
offset_right = 288.0
offset_bottom = 304.0
focus_mode = 0
theme_override_icons/grabber = ExtResource("4")
theme_override_icons/grabber_highlight = ExtResource("4")
theme_override_icons/grabber_disabled = ExtResource("4")
theme_override_styles/slider = SubResource("StyleBoxLine_0kfld")
min_value = -72.0
max_value = 0.0

[node name="Music" type="HSlider" parent="Node"]
offset_left = 80.0
offset_top = 335.0
offset_right = 288.0
offset_bottom = 351.0
focus_mode = 0
theme = SubResource("Theme_w5qgn")
theme_override_icons/grabber = ExtResource("4")
theme_override_icons/grabber_highlight = ExtResource("4")
theme_override_icons/grabber_disabled = ExtResource("4")
theme_override_styles/slider = SubResource("StyleBoxLine_0kfld")
min_value = -72.0
max_value = 0.0

[node name="Fullscreen" type="CheckBox" parent="Node"]
offset_left = 201.0
offset_top = 237.0
offset_right = 241.0
offset_bottom = 277.0
scale = Vector2(0.679999, 0.679999)
focus_mode = 0
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_icons/checked = ExtResource("5")
theme_override_icons/unchecked = ExtResource("6")
metadata/_edit_use_anchors_ = true

[node name="Save" type="Button" parent="Node"]
texture_filter = 2
offset_left = 200.0
offset_top = 384.0
offset_right = 280.0
offset_bottom = 402.0
scale = Vector2(1.52, 1.52)
focus_mode = 0
theme = SubResource("Theme_51314")
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wq7h2")
text = "Save"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="Save2" type="Button" parent="Node"]
texture_filter = 2
offset_left = 440.0
offset_top = 352.0
offset_right = 542.0
offset_bottom = 388.0
scale = Vector2(1.16, 1.16)
focus_mode = 0
theme = SubResource("Theme_51314")
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wq7h2")
text = "Reset
Progress"
metadata/_edit_use_anchors_ = true

[node name="OptionsVolumetest" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("7")
volume_db = -16.0
autoplay = true
bus = &"Music"

[node name="Baa" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("8")
volume_db = -10.0

[node name="Uihover" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("9")
volume_db = -10.0
mix_target = 2
max_polyphony = 6

[node name="Uipress" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("10")
volume_db = -10.0
mix_target = 2

[node name="Uirelease" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("11")
volume_db = -10.0
mix_target = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Node"]
offset_left = 80.0
offset_top = 264.0
offset_right = 264.0
offset_bottom = 282.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3")
theme_override_font_sizes/normal_font_size = 12
text = "Master Volume"
fit_content = true
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="Node"]
offset_left = 80.0
offset_top = 240.0
offset_right = 200.0
offset_bottom = 258.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3")
theme_override_font_sizes/normal_font_size = 12
text = "Toggle Fullscreen"
fit_content = true
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Node"]
offset_left = 80.0
offset_top = 312.0
offset_right = 264.0
offset_bottom = 330.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3")
theme_override_font_sizes/normal_font_size = 12
text = "Music Volume"
fit_content = true
scroll_active = false

[connection signal="text_changed" from="Node/Name" to="Node" method="_on_name_text_changed"]
[connection signal="drag_ended" from="Node/Master" to="Node" method="_on_master_drag_ended"]
[connection signal="value_changed" from="Node/Master" to="Node" method="_on_master_value_changed"]
[connection signal="value_changed" from="Node/Music" to="Node" method="_on_music_value_changed"]
[connection signal="toggled" from="Node/Fullscreen" to="Node" method="_on_fullscreen_toggled"]
[connection signal="button_down" from="Node/Save" to="Node" method="_on_save_button_down"]
[connection signal="mouse_entered" from="Node/Save" to="Node" method="_on_save_mouse_entered"]
[connection signal="pressed" from="Node/Save" to="Node" method="_on_save_pressed"]
[connection signal="button_down" from="Node/Save2" to="Node" method="_on_save_2_button_down"]
[connection signal="mouse_entered" from="Node/Save2" to="Node" method="_on_save_2_mouse_entered"]
[connection signal="pressed" from="Node/Save2" to="Node" method="_on_save_2_pressed"]
